# holosiivska_invest_bot

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  lambda_function.py  pyproject.toml  requirements.txt  setup_telegram_bot_service.sh
bot/: app.py
tests/: test_bot.py
